[package]
name = "trust_me_bro"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1" # 基於 serenity 的強大 Discord Bot 框架，簡化指令處理
serenity = { version = "0.12", features = ["collector", "cache", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0" # 用於加載 .env 文件
reqwest = { version = "0.11", features = ["json"] } # 用於請求金融 API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8" # 用於生成隨機（幽默）回應
tracing = "0.1" # 日誌
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3.7"
